--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="css/normalize.css">
   <!-- Подключаем стили -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-analytics.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js"></script>
   <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -124,26 +132,15 @@
     </main>
     <!-- /.posts -->
     <form action="#" class="add-post">
-      <input type="text" name="post-title" class="add-title" placeholder="Заголовок поста">
-      <textarea name="post-text" id="text" class="add-text" placeholder="Текст вашего поста"></textarea>
+      <input type="text" name="title" class="add-title" placeholder="Заголовок поста">
+      <textarea name="text" class="add-text" placeholder="Текст вашего поста"></textarea>
+      <input type="text" name="tags" class="add-tags" placeholder="Добавьте теги">
       <div class="add-buttons">
         <button type="submit" class="button add-button">
           <svg class="icon icon-fire">
             <use xlink:href="img/icons.svg#fire"></use>
           </svg>
           Опубликовать пост
-        </button>
-        <button class="button button-outline">
-          <svg class="icon icon-video">
-            <use xlink:href="img/icons.svg#video"></use>
-          </svg>
-          Видео
-        </button>
-        <button class="button button-outline">
-          <svg class="icon icon-photo">
-            <use xlink:href="img/icons.svg#photo"></use>
-          </svg>
-          Фото
         </button>
       </div>
     </form>
