--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- TODO: Add SDKs for Firebase products that you want to use
       https://firebase.google.com/docs/web/setup#available-libraries -->
   <!-- <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-analytics.js"></script> -->
-  <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js" defer></script>
+  <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js" defer></script>
   <script src="js/main.js" defer></script>
 </head>
 <body>
